# palautusrepositorio

./: README.md
viikko 2/poetry-web/: pyproject.toml
viikko 2/project-reader/: .gitignore  README.md  pyproject.toml
viikko 2/project-reader/src/: index.py  project.py  project_reader.py
viikko 3/hello-robot/: output.xml  report.html
viikko 3/hello-robot/src/: output.xml
viikko 3/hello-robot/src/tests/: increase_counter.robot
viikko 3/webcounter/hello-robot/: log.html
viikko 3/webcounter/hello-robot/src/: log.html  report.html
viikko 4/maksukortti-mock/src/: kassapaate.py
viikko 4/verkkokauppa/src/: varasto.py
viikko 4/verkkokauppa/src/tests/: kauppa_test.py
viikko 5/tennis/src/: index.py  tennis_game.py
viikko 6/query-language/: pyproject.toml
viikko 6/query-language/src/: index.py  matchers.py  player.py  player_reader.py
